--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+@import './styles/animations.css';
+@import './styles/components.css';
+
 .progress-gradient {
   background: linear-gradient(to right, #90ef89, #d692dd, #726edd);
 }
+
 .top-glow {
   box-shadow: 0 -26px 20px rgba(243, 186, 47, 0.3);
 }
